<resources>
    <string name="app_name">极简记账</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- 有关注册登录的Strings -->
    <string name="exit_app">退出</string>
    <string name="login_visitor">游客</string>
    <string name="login_cn">登陆</string>
    <string name="success_login_cn">登陆成功</string>
    <string name="failed_login_cn">登陆失败</string>
    <string name="register_cn">注册</string>
    <string name="edit_hint_phone_num">手机号</string>
    <string name="get_sms">获 取</string>
    <string name="edit_hint_sms">验证码</string>
    <string name="edit_hint_username">用户名</string>
    <string name="edit_hint_email">邮箱</string>
    <string name="edit_hint_password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="have_no_account">还没有账号？赶紧注册一个！</string>
    <string name="create_my_account">创建我的账号</string>
    <string name="success_register">账号注册成功</string>
    <string name="failed_register">账号注册失败，请检查网络或者输入是否正确</string>
    <string name="welcome_join_us">欢迎加入</string>
    <string name="welcome_content_cn">欢迎使用 极简记账</string>
    <string name="welcome_content_ad_cn2">体验极速记账的魅力</string>

    <string name="fragment_add_title">添加</string>
    <string name="fragment_detail_title">详细</string>
    <string name="fragment_find_title">发现</string>
    <string name="title_exp">支出</string>
    <string name="title_income">收入</string>
    <string name="title_activity_login">Sign in</string>


    <!--个人中心的String-->
    <string name="personal_backup_cn">备份</string>
    <string name="personal_share_cn">分享</string>
    <string name="personal_about_cn">关于</string>
    <string name="personal_feedback_cn">反馈</string>

    <!--FragmentAdd的String-->
    <string name="title_money">账单金额</string>
    <string name="error_money">请输入金额</string>
    <string name="no_summary">无备注</string>
    <string name="initial_money">0.00</string>

    <!--FragmentDetail的String-->
    <string name="title_detail">明细</string>
    <string name="total_budget">总预算</string>
    <string name="month_budget">月预算</string>
    <string name="month_income">月收入</string>
    <string name="month_exp">月支出</string>
    <string name="delete">删除</string>
    <string name="budget_cancel">取消</string>
    <string name="budget_ok">确定</string>

    <!--Statistics的String-->
    <string name="sure_choose_date">确定</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">结束日期</string>
    <string name="to_append">至</string>
    <string name="error_date_choose">起始日期不能大于等于结束日期</string>

    <!--键盘的String-->
    <string name="keyboard_1">1</string>
    <string name="keyboard_2">2</string>
    <string name="keyboard_3">3</string>
    <string name="keyboard_4">4</string>
    <string name="keyboard_5">5</string>
    <string name="keyboard_6">6</string>
    <string name="keyboard_7">7</string>
    <string name="keyboard_8">8</string>
    <string name="keyboard_9">9</string>
    <string name="keyboard_0">0</string>
    <string name="keyboard_comma">.</string>
    <string name="keyboard_del">←</string>
    <string name="keyboard_done">√</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">输入的手机号长度不正确</string>
    <string name="error_exist_username">输入的手机号已存在</string>
    <string name="error_invalid_email">输入的邮箱格式不正确</string>
    <string name="error_invalid_password">输入的密码长度不正确</string>
    <string name="error_incorrect_password">输入的密码不正确</string>
    <string name="error_field_required">这里是必输项</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="title_activity_register">Register</string>

    <!-- 支出分类 -->
    <string-array name="classify_title_exp">
        <item>吃喝玩乐</item>
        <item>买菜日用</item>
        <item>包包服饰</item>
        <item>交通住宿</item>
        <item>化妆护肤</item>
        <item>电子产品</item>
        <item>家电装修</item>
        <item>文教娱乐</item>
        <item>话费通讯</item>
        <item>加油养车</item>
        <item>医疗健康</item>
        <item>人情红包</item>
        <item>小孩育儿</item>
        <item>旅行踏青</item>
        <item>一般其他</item>
    </string-array>

    <!-- 支出颜色分类 -->
    <string-array name="classify_title_exp_color">
        <item>#844200</item>
        <item>#BB5E00</item>
        <item>#750000</item>
        <item>#EA7500</item>
        <item>#AE0000</item>
        <item>#FF9224</item>
        <item>#EA0000</item>
        <item>#FFAF60</item>
        <item>#FF5151</item>
        <item>#FFC78E</item>
        <item>#FF7575</item>
        <item>#FFDC89</item>
        <item>#FFB5B5</item>
        <item>#FFEEDD</item>
        <item>#FFECEC</item>
    </string-array>

    <!-- 支出分类图片未选中 -->
    <string-array name="classify_exp_icon_nor">
        <item>@drawable/classify_exp_icon0_nor</item>
        <item>@drawable/classify_exp_icon1_nor</item>
        <item>@drawable/classify_exp_icon2_nor</item>
        <item>@drawable/classify_exp_icon3_nor</item>
        <item>@drawable/classify_exp_icon4_nor</item>
        <item>@drawable/classify_exp_icon5_nor</item>
        <item>@drawable/classify_exp_icon6_nor</item>
        <item>@drawable/classify_exp_icon7_nor</item>
        <item>@drawable/classify_exp_icon8_nor</item>
        <item>@drawable/classify_exp_icon9_nor</item>
        <item>@drawable/classify_exp_icon10_nor</item>
        <item>@drawable/classify_exp_icon11_nor</item>
        <item>@drawable/classify_exp_icon12_nor</item>
        <item>@drawable/classify_exp_icon13_nor</item>
        <item>@drawable/classify_exp_icon14_nor</item>
    </string-array>

    <!-- 支出分类图片选中 -->
    <string-array name="classify_exp_icon_selected">
        <item>@drawable/classify_exp_icon0_selected</item>
        <item>@drawable/classify_exp_icon1_selected</item>
        <item>@drawable/classify_exp_icon2_selected</item>
        <item>@drawable/classify_exp_icon3_selected</item>
        <item>@drawable/classify_exp_icon4_selected</item>
        <item>@drawable/classify_exp_icon5_selected</item>
        <item>@drawable/classify_exp_icon6_selected</item>
        <item>@drawable/classify_exp_icon7_selected</item>
        <item>@drawable/classify_exp_icon8_selected</item>
        <item>@drawable/classify_exp_icon9_selected</item>
        <item>@drawable/classify_exp_icon10_selected</item>
        <item>@drawable/classify_exp_icon11_selected</item>
        <item>@drawable/classify_exp_icon12_selected</item>
        <item>@drawable/classify_exp_icon13_selected</item>
        <item>@drawable/classify_exp_icon14_selected</item>
    </string-array>

    <!-- 支出分类背景颜色图片 -->
    <string-array name="classify_exp_bg_selected">
        <item>@drawable/classify_exp_icon_bg_pressed_0</item>
        <item>@drawable/classify_exp_icon_bg_pressed_1</item>
        <item>@drawable/classify_exp_icon_bg_pressed_2</item>
        <item>@drawable/classify_exp_icon_bg_pressed_3</item>
        <item>@drawable/classify_exp_icon_bg_pressed_4</item>
        <item>@drawable/classify_exp_icon_bg_pressed_5</item>
        <item>@drawable/classify_exp_icon_bg_pressed_6</item>
        <item>@drawable/classify_exp_icon_bg_pressed_7</item>
        <item>@drawable/classify_exp_icon_bg_pressed_8</item>
        <item>@drawable/classify_exp_icon_bg_pressed_9</item>
        <item>@drawable/classify_exp_icon_bg_pressed_10</item>
        <item>@drawable/classify_exp_icon_bg_pressed_11</item>
        <item>@drawable/classify_exp_icon_bg_pressed_12</item>
        <item>@drawable/classify_exp_icon_bg_pressed_13</item>
        <item>@drawable/classify_exp_icon_bg_pressed_14</item>
    </string-array>

    <!-- 收入分类 -->
    <string-array name="classify_title_income">
        <item>薪资</item>
        <item>奖金</item>
        <item>报销</item>
        <item>利息</item>
        <item>投资</item>
        <item>兼职</item>
        <item>红包</item>
        <item>意外所得</item>
        <item>其他收入</item>
    </string-array>

    <!-- 支出颜色分类 -->
    <string-array name="classify_title_income_color">
        <item>#006000</item>
        <item>#007500</item>
        <item>#009100</item>
        <item>#00BB00</item>
        <item>#00EC00</item>
        <item>#79FF79</item>
        <item>#A6FFA6</item>
        <item>#CEFFCE</item>
        <item>#F0FFF0</item>
    </string-array>

    <!-- 收入分类图片未选中 -->
    <string-array name="classify_income_icon_nor">
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon6_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
        <item>@drawable/classify_income_icon4_nor</item>
    </string-array>

    <!-- 收入分类图片选中 -->
    <string-array name="classify_income_icon_selected">
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon6_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
        <item>@drawable/classify_income_icon4_pressed</item>
    </string-array>

    <!-- 收入分类背景颜色图片 -->
    <string-array name="classify_income_bg_selected">
        <item>@drawable/classify_exp_icon_bg_pressed_0</item>
        <item>@drawable/classify_exp_icon_bg_pressed_1</item>
        <item>@drawable/classify_exp_icon_bg_pressed_2</item>
        <item>@drawable/classify_exp_icon_bg_pressed_3</item>
        <item>@drawable/classify_exp_icon_bg_pressed_4</item>
        <item>@drawable/classify_exp_icon_bg_pressed_5</item>
        <item>@drawable/classify_exp_icon_bg_pressed_6</item>
        <item>@drawable/classify_exp_icon_bg_pressed_7</item>
        <item>@drawable/classify_exp_icon_bg_pressed_8</item>
    </string-array>
</resources>
