<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/num_1"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_1" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_2"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_2" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_3"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_3" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_del"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_del" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#E5E5E5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/num_4"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_4" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_5"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_5" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_6"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_6" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_0"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_0" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#E5E5E5" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/num_7"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_7" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_8"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_8" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_9"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_9" />

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/num_comma"
            style="@style/keyboard_num_btn"
            android:text="@string/keyboard_comma" />
    </LinearLayout>


</LinearLayout>