<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_register_or_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/app_icon_welcome" />


            <ImageButton
                android:id="@+id/ivBtn_app_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_back_selector" />
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:id="@+id/app_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dip"
        android:paddingRight="20dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@null"
            android:text="@string/welcome_content_cn"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:background="@null"
            android:text="@string/welcome_content_ad_cn2"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="normal" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_ad"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="60dip"
            android:paddingRight="60dip">

            <Button
                android:id="@+id/btn_visitor"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dip"
                android:layout_weight="1"
                android:background="@drawable/btn_visitor_selector"
                android:text="@string/login_visitor"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_register"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@drawable/btn_login_selector"
                android:text="@string/register_cn"
                android:textColor="#6495ED"
                android:textSize="14sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/login_cn"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>


</RelativeLayout>