<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/start_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/start_date"
            android:textColor="#000000"
            android:textSize="12sp" />

        <DatePicker
            android:id="@+id/start_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date_title"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner">

        </DatePicker>

        <TextView
            android:id="@+id/end_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date_picker"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/end_date"
            android:textColor="#000000"
            android:textSize="12sp" />

        <DatePicker
            android:id="@+id/end_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_date_title"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:datePickerMode="spinner">

        </DatePicker>

        <Button
            android:id="@+id/sure_date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/end_date_picker"
            android:layout_alignEnd="@id/end_date_picker"
            android:layout_below="@id/end_date_picker"
            android:background="@drawable/btn_date_yes_selector"
            android:text="@string/sure_choose_date"
            android:textColor="@color/colorWhite"
            android:textSize="12sp" />
    </RelativeLayout>


</RelativeLayout>